[package]
name = "adnl_rpc"
version = "0.1.0"
authors = ["Vladimir <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
serde = "1.0.125"
serde_json = "1.0.64"
tokio = "1.5.0"
warp = "0.3.1"
