[package]
name = "adnl_rpc"
version = "0.1.0"
authors = ["Vladimir <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
warp = "0.3.1"
bb8 = "0.7.0"

adnl = { git = "git://github.com/0xdeafbeef/ton-labs-adnl.git" }


warp-json-rpc = "0.3.0"
hyper = "0.14.7"
futures = "0.3.15"
env_logger = "0.8.3"
log = "0.4.14"
http = "0.2.4"


ton_block = { git = "git://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "git://github.com/tonlabs/ton-labs-types.git" }
thiserror = "1.0.24"
hex = "0.4.3"
base64 = "0.13.0"
