[package]
name = "adnl_rpc"
version = "0.1.0"
authors = ["Vladimir <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adnl = { git = "git://github.com/0xdeafbeef/ton-labs-adnl.git" }
ton_block = { git = "git://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "git://github.com/tonlabs/ton-labs-types.git" }

anyhow = "1.0.40"
async-trait = "0.1.50"
base64 = "0.13.0"
bb8 = "0.7.0"
env_logger = "0.8.3"
futures = "0.3.15"
hex = "0.4.3"
http = "0.2.4"
hyper = "0.14.7"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.3.1"
warp-json-rpc = "0.3.0"
