[package]
name = "adnl_rpc"
version = "0.1.0"
authors = [
    "Vladimir <v.petrzhikovskiy@dexpa.io>",
    "Sergey <sefremow@dexpa.io>",
    "Ivan <v.kalinin@dexpa.io>"
]
edition = "2018"

[dependencies]
adnl_rpc_models = { path = "../adnl_rpc_models" }

adnl = { git = "git://github.com/broxus/ton-labs-adnl.git" }
ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
ton_block = { git = "git://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "git://github.com/tonlabs/ton-labs-types.git" }

anyhow = "1.0.40"
async-trait = "0.1.50"
base64 = "0.13.0"
bb8 = "0.7.0"
config = { version = "0.11.0", features = ["yaml"] }
clap = "3.0.0-beta.2"
log4rs = "1.0"
futures = "0.3.15"
hex = "0.4.3"
http = "0.2.4"
hyper = "0.14.7"
humantime = "2.1"
log = "0.4.14"
parking_lot = "0.11"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.3.1"
warp-json-rpc = "0.3.0"
