[package]
name = "adnl_rpc_models"
version = "0.1.0"
authors = [
    "Vladimir <v.petrzhikovskiy@dexpa.io>",
    "Sergey <sefremow@dexpa.io>",
    "Ivan <v.kalinin@dexpa.io>",
]
edition = "2018"

[dependencies]
ton_block = { git = "git://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "git://github.com/tonlabs/ton-labs-types.git" }

anyhow = "1.0.40"
base64 = "0.13.0"
hex = "0.4.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
